--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.2.0",
     "scrollmagic": "^2.0.8",
     "vue": "^2.6.11",
     "vue-i18n": "^8.26.5",
